changing order of catagories + cropping images correctly

--- a/src/components/Projects/styles.module.css
+++ b/src/components/Projects/styles.module.css
@@ -49,7 +49,7 @@
 
 .photoGallary {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(340px, .2fr));
   grid-auto-rows: 500px;
   gap: 1em;
 }
@@ -69,7 +69,6 @@
 /* indivicual image styles */
 
 .project {
-  max-width: 500px;
   max-width: 700px;
   overflow: hidden;
 }
